<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetProfileFragment">

    <!-- a. Assignment HW03-->
    <!-- b. fragment_set_profile.xml-->
    <!-- c.Group - 03-->
    <!--   1) Harika Priya Prathipati-->
    <!--   2) Himanshi Khatri-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weightEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weightEtStr"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/enterWeightEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterWeightHintStr"
            android:inputType="number" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderStr"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femaleRbStr" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maleRbStr" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:backgroundTint="@color/grey"
            android:text="@string/cancelBtnStr"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/setWeightBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:backgroundTint="@color/grey"
            android:text="@string/setWeightBtnStr"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>