<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddDrinkFragment">

    <!-- a. Assignment HW03-->
    <!-- b. fragment_add_drink.xml-->
    <!-- c.Group - 03-->
    <!--   1) Harika Priya Prathipati-->
    <!--   2) Himanshi Khatri-->

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drinksRadioGroup"
        android:orientation="horizontal"
        android:weightSum="4">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drinkSizeStr"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oneOzRbStr"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fiveOzRbStr"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twelveOzRbStr"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alcoholPercentageStr"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:id="@+id/seekbar"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/alcoholPercentage"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelBtnStr"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            android:id="@+id/cancelBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addDrinkBtnStr"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            android:id="@+id/addDrinkBtn"/>
    </LinearLayout>

</LinearLayout>